finished project firts attempt

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/edit-btn.svg" alt="edit-btn icon" />Edit
-              Profile
+              <img
+                src="./images/edit-btn.svg"
+                alt="edit-btn icon"
+                class="edit-icon"
+              />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
