finished project second  attempt corrections done

--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img
-                src="./images/edit-btn.svg"
-                alt="edit-btn icon"
-                class="edit-icon"
-              />Edit Profile
+              Edit Profile
             </button>
           </div>
-          <button type="button" class="profile__add-btn">
-            <img src="./images/new-post.svg" alt="add post btn" /> New Post
-          </button>
+          <button type="button" class="profile__add-btn">New Post</button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
@@ -110,7 +104,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">2025 &copy; Spots</footer>
+      <footer class="footer">
+        <p class="footer__copy">2025 &copy; Spots</p>
+      </footer>
     </div>
   </body>
 </html>
