--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <footer class="footer">
         <p class="footer__copy">2025 &copy; Spots</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__content">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -134,7 +134,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal__is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__content">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
@@ -162,5 +162,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
