--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <footer class="footer">
         <p class="footer__copy">2025 &copy; Spots</p>
       </footer>
-      <div class="modal" id="edit-profile-modal">
+      <div class="modal modal-is-opened" id="edit-profile-modal">
         <div class="modal__content">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
