project 4 final stage errors fixed second try

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="spots project" />
+    <meta name="description" content="spots a project about photo sharing" />
     <meta name="keywords" content="html, css " />
     <meta name="author" content="Victor Reyes" />
     <link rel="stylesheet" href="./pages/index.css" />
@@ -107,7 +107,7 @@
       <footer class="footer">
         <p class="footer__copy">2025 &copy; Spots</p>
       </footer>
-      <div class="modal modal-is-opened" id="edit-profile-modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__content">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
