Spots project corrections made

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
       <div class="modal" id="edit-profile-modal">
         <div class="modal__content">
-          <button type="button" class="modal__close-btn"></button>
+          <button
+            type="button"
+            aria-label="Close modal"
+            class="modal__close-btn"
+          ></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label"
@@ -62,6 +66,7 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                required
               />
             </label>
             <label for="profile-description-input" class="modal__label"
@@ -79,7 +84,11 @@
       </div>
       <div class="modal" id="new-post-modal">
         <div class="modal__content">
-          <button type="button" class="modal__close-btn"></button>
+          <button
+            type="button"
+            aria-label="Close modal"
+            class="modal__close-btn"
+          ></button>
           <h2 class="modal__title">New post</h2>
           <form class="modal__form">
             <label for="card-image-input" class="modal__label"
@@ -104,11 +113,11 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_preview" id="preview-modal">
+      <div class="modal modal_type_preview" id="preview-modal">
         <div class="modal__image-container">
           <button
             type="button"
-            class="modal__close-btn modal__close-btn_preview"
+            class="modal__close-btn modal__close-btn_type_preview"
           ></button>
           <img src="#" alt="" class="modal__image" />
           <p class="modal__caption"></p>
